# TuyaOpen-ubuntu

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_example.py  build_example.sh  compiler_setup.cmake  platform_prepare.py  toolchain_file.cmake
.github/workflows/: sync-to-gitee.yml
examples/hello_world/: app_default.config
tools/: util.py
tuyaos_adapter/: tuyaopen_adapter.cmake
tuyaos_adapter/include/: tkl_asr.h  tkl_kws.h  tkl_vad.h  tkl_wifi_stub.h
tuyaos_adapter/include/camera/: tkl_camera_v4l2.h
tuyaos_adapter/include/i2c/: tkl_i2c.h
tuyaos_adapter/include/jpeg_codec/: tkl_jpeg_codec.h
tuyaos_adapter/include/media/: tkl_audio.h  tkl_media.h
tuyaos_adapter/include/security/: tkl_symmetry.h
tuyaos_adapter/include/spi/: tkl_spi.h
tuyaos_adapter/include/system/: tkl_memory.h  tkl_system.h  tkl_thread.h
tuyaos_adapter/include/utilities/include/: tuya_cloud_types.h  tuya_ringbuf.h
tuyaos_adapter/include/utilities/src/: tuya_ringbuf.c
tuyaos_adapter/src/: mvec_impl.c  platform_config.yaml  tkl_flash.c  tkl_gpio.c  tkl_i2c.c  tkl_memory.c  tkl_ota.c  tkl_pinmux.c  tkl_pwm.c  tkl_rtc.c  tkl_spi.c  tkl_system.c  tkl_uart.c  tkl_wired.c
tuyaos_adapter/src/tkl_audio/: tkl_asr.c  tkl_kws.c  tkl_vad.c
tuyaos_adapter/src/tkl_audio/libs/DshanPi_A1/alsa/: libasound.so.2.0.0
tuyaos_adapter/src/tkl_audio/libs/RK3576/alsa/include/alsa/: version.h
tuyaos_adapter/src/tkl_audio/libs/Raspberry_Pi/alsa/: libasound.so.2.0.0
tuyaos_adapter/src/tkl_audio/libs/Raspberry_Pi/audio_subsys/include/kws/: audio_subsys_kws_factory2.h
tuyaos_adapter/src/tkl_audio/libs/Ubuntu/alsa/: libasound.so.2.0.0
tuyaos_adapter/src/tkl_audio/libs/Ubuntu/alsa/include/alsa/: asoundlib.h
tuyaos_adapter/src/tkl_audio/models/: mdtc_chunk_300ms.mnn
tuyaos_adapter/src/tkl_bt/: bt_dbus_api.c  bt_hci_adv_api.c  tkl_bluetooth.c
tuyaos_adapter/src/tkl_bt/bluez_inc/: RELEASE.md
tuyaos_adapter/src/tkl_bt/bluez_inc/binc/: adapter.c  advertisement.c
tuyaos_adapter/src/tkl_camera/: tkl_camera_v4l2.c
tuyaos_adapter/src/tkl_display/libs/Raspberry_Pi/SDL2/include/SDL2/: SDL_config.h
tuyaos_adapter/src/tkl_display/libs/Ubuntu/SDL2/include/SDL2/: SDL_config.h
tuyaos_adapter/src/tkl_jpeg_codec/: tkl_jpeg_codec.c
tuyaos_adapter/src/tkl_wifi/: linux_wifi.c  linux_wifi.h  tkl_wifi.c
tuyaos_adapter/src/tkl_wifi/iwlib/: iwlib.c
tuyaos_adapter/src/tkl_wifi/wpa_s/: wpa_command.c
